--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-demo.
-<script src="demo/main.js"></script>
+<script src="dist/defaultAwesomeFunction.min.js"></script>
+<script>
+document.body.innerText = defaultAwesomeFunction('HEY')
+</script>
 </body>
 </html>
